--- a/assets/views/browser-action.html
+++ b/assets/views/browser-action.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title></title>
     <style type="text/css">
-        html, body {
+        html,
+        body {
             margin: 0;
             -webkit-user-select: none;
         }
-
+        
         .container {
             width: 250px;
             font-family: Helvetica, Ubuntu, Arial, sans-serif;
         }
-
+        
         h1 {
             font-size: 2em;
         }
-
+        
         .logo {
             padding: 10px 10px 30px;
             display: flex;
         }
-
+        
         .logo-icon {
             width: 48px;
             height: 48px;
         }
-
+        
         .logo-text {
             padding-left: 10px;
             line-height: 48px;
             font-size: 15px;
         }
-
+        
         .content {
             height: 40px;
             margin: 2px;
         }
-
+        
         .toggle label {
             position: relative;
             display: block;
@@ -49,7 +51,7 @@
             cursor: pointer;
             transition: all 0.3s ease;
         }
-
+        
         .toggle label:after {
             position: absolute;
             left: -2px;
@@ -63,38 +65,37 @@
             content: '';
             transition: all 0.3s ease;
         }
-
+        
         .toggle label:active:after {
             transform: scale(1.15, 1.15);
         }
-
-        .toggle input:checked ~ label {
+        
+        .toggle input:checked~label {
             background: #9fc8ff;
         }
-
-        .toggle input:checked ~ label:after {
+        
+        .toggle input:checked~label:after {
             left: 17px;
             background: #2ba3f4;
         }
-
+        
         .toggle input {
             display: none;
         }
-
+        
         .button {
             position: relative;
             line-height: 20px;
             height: 30px;
             margin-bottom: 5px;
         }
-
+        
         .button .text {
             position: absolute;
             left: 10px;
             top: -6px;
-
         }
-
+        
         .button .description {
             position: absolute;
             left: 10px;
@@ -102,7 +103,7 @@
             top: 5px;
             font-size: 9px;
         }
-
+        
         .button .toggle {
             position: absolute;
             right: 10px;
@@ -112,28 +113,32 @@
     <script type="text/javascript" src="../js/jquery.js"></script>
     <script type="text/javascript" src="../js/browser-action.js"></script>
 </head>
+
 <body>
-    <div class="container">
+    <div class="container"> <br />
         <div class="content">
-            <div class="logo">
+            <!-- blanked to test
+                
+                <div class="logo">
                 <img class="logo-icon" src="../img/icon48.png">
                 <div class="logo-text">
                     eBay™ Popularity Sort
                 </div>
-            </div>
+            </div> -->
             <div class="button">
-                <div class="text">
+                <!-- <div class="text">
                     Sort by Popularity
-                </div>
-                <div class="description">
-                    sort results by number of times sold
+            </div>-->
+                <div class="description">sort results by number of times sold
                 </div>
                 <div class="toggle">
-                    <input type="checkbox" id="enable-sort-by-popularity"/>
+                    <input type="checkbox" id="enable-sort-by-popularity" />
                     <label for="enable-sort-by-popularity"></label>
                 </div>
             </div>
         </div>
     </div>
+    </div>
 </body>
+
 </html>
