Revert "Updated the extension and made some visual changes. updated jquery. to 3.5.1"
This reverts commit 33ba10eff518e2e17d31f2e762f220ca6c0849e8.

--- a/Package/assets/views/browser-action.html
+++ b/Package/assets/views/browser-action.html
@@ -13,7 +13,6 @@
         
         .container {
             width: 250px;
-            height: 175px;
             font-family: Helvetica, Ubuntu, Arial, sans-serif;
         }
         
@@ -118,16 +117,18 @@
 <body>
     <div class="container"> <br />
         <div class="content">
+            <!-- blanked to test
+                
                 <div class="logo">
                 <img class="logo-icon" src="../img/icon48.png">
                 <div class="logo-text">
                     eBay™ Popularity Sort
                 </div>
-            </div>
+            </div> -->
             <div class="button">
-                <div class="text">
+                <!-- <div class="text">
                     Sort by Popularity
-            </div>
+            </div>-->
                 <div class="description">sort results by number of times sold
                 </div>
                 <div class="toggle">
